--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,12 @@ flask = ["flask"]
 quart = ["quart"]
 
 [project.scripts]
-vt = "vite_transporter:cli_entry"
+vt = "vite_transporter:cli"
 
 [tool.pyqwe]
 vite = "*(app_vite_demo):npx vite --host 127.0.0.1 --port 5003"
-flask = "*:flask --app app_flask_demo run --host 127.0.0.1 --port 5001 --debug"
-quart = "*:quart --app app_quart_demo run --host 127.0.0.1 --port 5002"
+flask = "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug"
+quart = "*:quart --app app_quart run --host 127.0.0.1 --port 5002"
 install = "*:flit install --symlink"
 build = "*:flit build"
 publish = "*shell:export FLIT_USERNAME=__token__ && flit publish"
@@ -38,5 +38,35 @@ publish = "*shell:export FLIT_USERNAME=__token__ && flit publish"
 [tool.vite_transporter]
 npm_exec = "npm"
 npx_exec = "npx"
-serve_app = "app_flask_demo"
-vite_apps = ["app_vite_demo"]
+serve_app = "app_flask"
+vite_apps = ["frontend"]
+
+
+[tool.flit.sdist]
+exclude = [
+    ".github",
+    "app_flask",
+    "app_quart",
+    "frontend",
+    "dist",
+    ".gitignore",
+    ".env"
+]
+
+[tool.mypy]
+python_version = "3.9"
+files = ["src/vite_transporter"]
+show_error_codes = true
+pretty = true
+strict = true
+
+[tool.pyright]
+pythonVersion = "3.9"
+include = ["src/vite_transporter"]
+typeCheckingMode = "basic"
+
+[tool.ruff]
+src = ["src"]
+fix = true
+show-fixes = true
+output-format = "full"
