--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,5 +54,6 @@ jobs:
         run: |
           flit install
       - name: Test with pytest
+        working-directory: /home/runner/work/vite-transporter/vite-transporter/
         run: |
           pytest
