--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app_vite_demo",
-  "version": "0.1.0",
+  "name": "frontend",
+  "version": "1.0.0",
   "description": "The demo vite app.",
   "scripts": {
     "start": "vite",
