--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,44 +3,54 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "vite-transporter"
-description = 'Transport Vite apps.'
+name = "flask-vite-transporter"
+version = "1.0.0"
+description = 'Transport Vite apps to Flask (or Quart).'
 authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
 readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = [
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
-    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
-    'Natural Language :: English',
+    "License :: OSI Approved :: MIT License",
+    "Framework :: Flask",
+    "Natural Language :: English",
 ]
 requires-python = ">=3.8"
-dynamic = ["version"]
+
+dependencies = [
+    "Flask"
+]
 
 [project.optional-dependencies]
-flask = ["flask"]
 quart = ["quart"]
 
 [project.scripts]
-vt = "vite_transporter:cli"
+vt = "flask_vite_transporter.cli:cli"
 
-[tool.pyqwe]
-vite = "*(app_vite_demo):npx vite --host 127.0.0.1 --port 5003"
-flask = "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug"
-quart = "*:quart --app app_quart run --host 127.0.0.1 --port 5002"
-install = "*:flit install --symlink"
-build = "*:flit build"
-publish = "*shell:export FLIT_USERNAME=__token__ && flit publish"
-
-[tool.vite_transporter]
+[tool.flask_vite_transporter]
 npm_exec = "npm"
 npx_exec = "npx"
 serve_app = "app_flask"
 vite_apps = ["frontend"]
 
+[tool.pyqwe]
+flask_plus_vite = [
+    "@async",
+    "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug",
+    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
+]
+quart_plus_vite = [
+    "@async",
+    "*:quart --app app_quart run --host 127.0.0.1 --port 5002",
+    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
+]
+install = "*:flit install --symlink"
+update_project_requirements = [
+    "@sync",
+    "*(requirements):pip-compile --upgrade typing.in -o typing.txt",
+    "*(requirements):pip-compile --upgrade tests.in -o tests.txt",
+    "*(requirements):pip-compile --upgrade build.in -o build.txt",
+    "*(requirements):pip-compile --upgrade dev.in -o dev.txt",
+]
 
 [tool.flit.sdist]
 exclude = [
@@ -55,14 +65,14 @@ exclude = [
 
 [tool.mypy]
 python_version = "3.9"
-files = ["src/vite_transporter"]
+files = ["src/flask_vite_transporter"]
 show_error_codes = true
 pretty = true
 strict = true
 
 [tool.pyright]
 pythonVersion = "3.9"
-include = ["src/vite_transporter"]
+include = ["src/flask_vite_transporter"]
 typeCheckingMode = "basic"
 
 [tool.ruff]
