--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "flask-vite-transporter"
-version = "2.0.2"
-description = 'Transport Vite apps to Flask (or Quart).'
+version = "2.0.3"
+description = "Transport Vite apps to Flask (or Quart)."
 authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
 readme = "README.md"
 license = { file = "LICENSE" }
