--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "flask-vite-transporter"
-version = "2.1.0"
+version = "2.2.0"
 description = "Transport Vite apps to Flask (or Quart)."
 authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
 readme = "README.md"
@@ -14,14 +14,26 @@ classifiers = [
     "Framework :: Flask",
     "Natural Language :: English",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 
 dependencies = [
-    "Flask"
+    "flask>=3.0.3",
+]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.14.1",
+    "pyqwe>=3.1.1",
+    "pyright>=1.1.403",
+    "pytest>=8.3.5",
+    "python-dotenv>=1.1.1",
+    "ruff>=0.12.7",
 ]
 
 [project.optional-dependencies]
-quart = ["quart"]
+quart = [
+    "quart",
+]
 
 [project.scripts]
 vt = "flask_vite_transporter.cli:cli"
@@ -32,27 +44,6 @@ npx_exec = "npx"
 serve_app = "app_flask"
 vite_app.frontend = "frontends/frontend_1"
 vite_app.other_frontend = "frontends/frontend_2"
-
-
-[tool.pyqwe]
-flask_plus_vite = [
-    "@async",
-    "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug",
-    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
-]
-quart_plus_vite = [
-    "@async",
-    "*:quart --app app_quart run --host 127.0.0.1 --port 5002",
-    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
-]
-install = "*:flit install --symlink"
-update_project_requirements = [
-    "@sync",
-    "*(requirements):pip-compile --upgrade typing.in -o typing.txt",
-    "*(requirements):pip-compile --upgrade tests.in -o tests.txt",
-    "*(requirements):pip-compile --upgrade build.in -o build.txt",
-    "*(requirements):pip-compile --upgrade dev.in -o dev.txt",
-]
 
 [tool.flit.sdist]
 exclude = [
@@ -82,3 +73,23 @@ src = ["src"]
 fix = true
 show-fixes = true
 output-format = "full"
+
+[tool.pyqwe]
+flask_plus_vite = [
+    "@async",
+    "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug",
+    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
+]
+quart_plus_vite = [
+    "@async",
+    "*:quart --app app_quart run --host 127.0.0.1 --port 5002",
+    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
+]
+install = "*:flit install --symlink"
+update_project_requirements = [
+    "@sync",
+    "*(requirements):pip-compile --upgrade typing.in -o typing.txt",
+    "*(requirements):pip-compile --upgrade tests.in -o tests.txt",
+    "*(requirements):pip-compile --upgrade build.in -o build.txt",
+    "*(requirements):pip-compile --upgrade dev.in -o dev.txt",
+]
