--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,18 +78,11 @@ output-format = "full"
 flask_plus_vite = [
     "@async",
     "*:flask --app app_flask run --host 127.0.0.1 --port 5001 --debug",
-    "*(frontend):npx vite --host 127.0.0.1 --port 5003"
+    "*(frontends/frontend_1):npx vite --host 127.0.0.1 --port 5003",
+    "*(frontends/frontend_2):npx vite --host 127.0.0.1 --port 5004"
 ]
 quart_plus_vite = [
     "@async",
     "*:quart --app app_quart run --host 127.0.0.1 --port 5002",
     "*(frontend):npx vite --host 127.0.0.1 --port 5003"
-]
-install = "*:flit install --symlink"
-update_project_requirements = [
-    "@sync",
-    "*(requirements):pip-compile --upgrade typing.in -o typing.txt",
-    "*(requirements):pip-compile --upgrade tests.in -o tests.txt",
-    "*(requirements):pip-compile --upgrade build.in -o build.txt",
-    "*(requirements):pip-compile --upgrade dev.in -o dev.txt",
 ]
